--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ dependencies {
             "io.rest-assured:rest-assured:5.4.0",
             "com.fasterxml.jackson.core:jackson-databind:2.16.1",
             "com.github.javafaker:javafaker:1.0.2",
-            "org.seleniumhq.selenium:selenium-java:4.1.0")
+            "org.seleniumhq.selenium:selenium-java:4.1.0",
+            "org.slf4j:slf4j-simple:2.0.7")
 }
 
 tasks.withType(JavaCompile) {
